feat(#1): subscribe to videos and modules events
